# template_pkg_ros2

./: .clang-format  .gitignore  .pre-commit-config.local.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  AGENTS.md  CMakeLists.txt  LICENSE  README.md  change_name.py  commit.sh  package.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  ros_entrypoint.sh
.github/workflows/: add-opened-issue-to-project.yml  ci.yml  ci_actions.yml  notify-missing-labels.yml  notify-unlabeled-issue.yml  notify-unlabeled-pr.yml  pre-commit.yml  ros-ci.yml  sync-pre-commit.yml  test-reusable-action.yml
.pre-commit/: LICENSE_HEADER.txt  check_case_filenames.py  check_launch_file_names.py  fix_includes.py
examples/cpp/: hello_world_node.cpp  logging_demo.cpp
examples/python/: clock_node.py  hello_world_node.py
include/ros2_template_pkg/: ros2_template_node.hpp
include/template_pkg_ros2/: minimal_cpp_node.hpp  ros2_template_node.hpp
launch/: example_include.launch.py  include.launch.py  ros2_template.launch.py  test_launch.py
ros2_template_pkg/: __init__.py  module_to_import.py
scripts/: clock_node.py  hello_world_node.py  minimal_py_node.py  py_node.py  ros2_template_node_python.py
src/: cpp_node.cpp  hello_world_node.cpp  logging_demo.cpp  minimal_cpp_node.cpp  ros2_template_node.cpp  ros2_template_node_cpp.cpp
template_pkg_ros2/: __init__.py  minimal_py_node.py
test/: CMakeLists.txt  test_hello_world.py  test_minimal_cpp_node.cpp  test_minimal_py_node.py  test_ros2_template_node.cpp
